<resources>
    <string name="app_name">we_us_n_our_app</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="user_info_title">Enter your Details</string>
    <string name="user_name">Enter Your Name</string>
    <string name="dob">Select your DOB</string>
    <string name="cnfrm_btn">Confirm</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello Username</string>
    <string name="nav_header_subtitle">Membership Type:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_post_head">Add post</string>
    <string name="action_add_headline">Enter Headline of the Post</string>
    <string name="action_add_content">Enter Main content</string>
    <string name="action_upload_image">Select Image</string>
    <string name="action_add_post">Upload Post</string>
    <string name="menu_home">Home</string>
    <string name="menu_make_payment">Make Payment</string>
    <string name="menu_transaction_history">Transaction History</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="payment_amount">Enter Payment Amount</string>
    <string name="payment_date">Enter Payment Date</string>
    <string name="joining_date">Enter Joining Date</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
</resources>
