<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.we_us_n_our_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_make_payment"
        android:name="com.example.we_us_n_our_app.ui.makepayment.MakePaymentFragment"
        android:label="@string/menu_make_payment"
        tools:layout="@layout/fragment_make_payment" />

    <fragment
        android:id="@+id/nav_transaction_history"
        android:name="com.example.we_us_n_our_app.ui.transactionhistory.TransactionHistoryFragment"
        android:label="@string/menu_transaction_history"
        tools:layout="@layout/fragment_transaction_history" />
    <fragment
        android:id="@+id/nav_action_add_post"
        android:name="com.example.we_us_n_our_app.ui.addpost.AddPostFragment"
        android:label="@string/action_add_post"
        tools:layout="@layout/activity_add_post" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.we_us_n_our_app.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.we_us_n_our_app.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.we_us_n_our_app.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>